--- a/src/TarefasSite/Views/Tarefas/Editar.cshtml
+++ b/src/TarefasSite/Views/Tarefas/Editar.cshtml
@@ -10,6 +10,13 @@
 
     @using (Html.BeginForm(FormMethod.Post))
     {
+        @if (ViewBag.ExisteErro == true)
+        {
+            <div class="alert-danger p-3">
+                @Html.ValidationSummary(false, "Os seguintes erros foram encontrados: ", new { @class = "text-danger" })
+            </div>
+        }
+
         <div class="mb-3">
             @Html.LabelFor(m => m.Id, new { @class = "form-label" })
             @Html.TextBoxFor(m => m.Id, new { @class = "form-control", @readonly = true })
