Adicionando botoes na view Home/Index

--- a/src/TarefasSite/Views/Home/Index.cshtml
+++ b/src/TarefasSite/Views/Home/Index.cshtml
@@ -4,5 +4,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Seja bem vindo ao Gerenciador de Tarefas</h1>
+
+<div class="text-center">
+    <h1>Olá, Seja bem vindo ao Gerenciador de Tarefas Elly!!</h1>
+</div>
+<div class="col text-center">
+     <a href="/User/Login" type="button" class="btn btn-outline-primary btn-lg"> Acesse sua conta </a>
+     <a href="/User/Nova" type="button" class="btn btn-outline-secondary btn-lg"> Criar conta </a>
+</div>
+
+
+
+
+
+
 
