--- a/src/TarefasSite/Views/Shared/_Layout.cshtml
+++ b/src/TarefasSite/Views/Shared/_Layout.cshtml
@@ -1,24 +1,31 @@
-﻿
+﻿@using System.Security.Claims
 @{
     ViewData["Title"] = "_Layout";
 }
 
 <html>
-    <head>
-        <link href="~/lib/bootstrap/css/bootstrap.css?v=1.0.0.2" rel="stylesheet"/>
-    </head>
-    <body>
-        <div class="container">
-            <ul class="nav mb-4">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/Home">Home</a>
+<head>
+    <link href="~/lib/bootstrap/css/bootstrap.css?v=1.0.0.2" rel="stylesheet" />
+</head>
+<body>
+    <div class="container">
+        <ul class="nav mb-4">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/Home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/Tarefas">Lista de Tarefas</a>
+            </li>
+            
+            
+                <li class="btn btn">
+                    <a class="nav-link" href="/User/Logout">Sair</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Tarefas">Lista de Tarefas</a>
-                </li>
-            </ul>
-            @RenderBody()
-        </div>        
-    </body>
+            
+
+        </ul>
+        @RenderBody()
+    </div>
+</body>
 </html>
 
