Adicionando imagem ao projeto

--- a/src/TarefasSite/Views/Home/Index.cshtml
+++ b/src/TarefasSite/Views/Home/Index.cshtml
@@ -8,7 +8,10 @@
 <div class="text-center">
     <h1>Olá, Seja bem vindo ao Gerenciador de Tarefas Elly!!</h1>
 </div>
-<div class="col text-center">
+<div class="text-center" style="margin-top: 180px">
+    <img src="~/Imagens/cabecalho_doc.png" />
+</div>
+<div class="col text-center" style="margin-top: 180px">
      <a href="/User/Login" type="button" class="btn btn-outline-primary btn-lg"> Acesse sua conta </a>
      <a href="/User/Nova" type="button" class="btn btn-outline-secondary btn-lg"> Criar conta </a>
 </div>
